--- a/template.yaml
+++ b/template.yaml
@@ -54,7 +54,7 @@ Resources:
       Policies:
         - AWSLambdaBasicExecutionRole
         - DynamoDBCrudPolicy:
-            TableName: !Ref PicturesGlobalTable
+            TableName: !Ref DynamoTableName
         - Statement:
             Effect: Allow
             Action:
@@ -70,7 +70,7 @@ Resources:
       CodeUri: photo_lambda
       Environment:
         Variables:
-          AWS_DYNAMODB_TABLE_NAME: !Ref PicturesGlobalTable
+          AWS_DYNAMODB_TABLE_NAME: !Ref DynamoTableName
           AWS_S3_STAGE_BUCKET_NAME: !Ref StagingBucket
           AWS_S3_PRIMARY_BUCKET_NAME: !Ref PrimaryBucket
           AWS_COGNITO_USER_POOL_ID: !Ref UserPool
@@ -292,7 +292,9 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:PutItem
-            Resource: !GetAtt PicturesGlobalTable.Arn
+            Resource:
+              - !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${DynamoTableName}
+              - !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${DynamoTableName}/index/*
         - Statement:
             Effect: Allow
             Action:
@@ -311,7 +313,7 @@ Resources:
       CodeUri: statemachine
       Environment:
         Variables:
-          AWS_DYNAMODB_TABLE_NAME: !Ref PicturesGlobalTable
+          AWS_DYNAMODB_TABLE_NAME: !Ref DynamoTableName
           AWS_S3_PRIMARY_BUCKET_NAME: !Ref PrimaryBucket
           WEBSOCKET_CON_TABLE_NAME: !Ref WebSocketConnectionsTable
           API_GATEWAY_WEBSOCKET_ENDPOINT: !Join
