--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -113,6 +113,7 @@ jobs:
 
   deploy-primary:
     if: github.ref == 'refs/heads/main'
+    needs: [build-and-package-for-primary]
     runs-on: ubuntu-latest
     # Configure GitHub Action Environment to have a manual approval step before deployment to production
     # https://docs.github.com/en/actions/reference/environments
@@ -154,6 +155,7 @@ jobs:
 
   deploy-secondary:
     if: github.ref == 'refs/heads/main'
+    needs: [build-and-package-for-secondary]
     runs-on: ubuntu-latest
     # Configure GitHub Action Environment to have a manual approval step before deployment to production
     # https://docs.github.com/en/actions/reference/environments
