--- a/template.yaml
+++ b/template.yaml
@@ -385,6 +385,7 @@ Resources:
 
   S3ReplicationRole:
     Type: AWS::IAM::Role
+    Condition: IsPrimaryRegion
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
