--- a/cognito_lambda/pom.xml
+++ b/cognito_lambda/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>sns</artifactId>
             <version>2.25.27</version>
         </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cognitoidentityprovider</artifactId>
+            <version>2.20.31</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
